--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "outDir": "./dist",
     "lib": ["DOM", "ES6"]
   },
-  "include": ["./src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
